--- a/ISDS7075_FinalProject_Group7.ipynb
+++ b/ISDS7075_FinalProject_Group7.ipynb
@@ -1179,7 +1179,7 @@
    "source": [
     "Decision Tree Classifier with the decision tree graphic\n",
     "\n",
-    "This decision tree was similar to the Logistic Regression model as we are predicting decently at our true positive level at 41 cases identified, but had a lower accuracy with only 54%"
+    "This decision tree was similar to the Logistic Regression model as we are predicting decently at our true positive level with 41 cases identified, but had a lower accuracy with only 54%"
    ]
   },
   {
