--- a/ISDS7075_FinalProject_Group7.ipynb
+++ b/ISDS7075_FinalProject_Group7.ipynb
@@ -1276,9 +1276,9 @@
    "id": "2575e74a-92ec-4903-a837-3c38face661f",
    "metadata": {},
    "source": [
-    "Random Forest has the same level of accuracy as the Logistic Regression at 65%, but only catches 39 of the 59 cases. The Logistic Regression model was able to catch 41 of the 59 cases. Logistic Regression is the best performer and Random Forest was the most accurate. If the priority will be to catch as many true cases as possible, Logistic Regression is the promising.\n",
+    "Random Forest has the same level of accuracy as the Logistic Regression at 65%, but only catches 39 of the 59 cases. The Logistic Regression model was able to catch 41 of the 59 cases. Logistic Regression is the best performer and Random Forest was the most accurate. If the priority will be to catch as many true cases as possible, Logistic Regression is the most promising.\n",
     "\n",
-    "Improvements can to our model can be done by tuning our parameters, adjusting classification thresholds, and testing advanced ensemble methods."
+    "Improvements to our model can be achieved by tuning our parameters, adjusting classification thresholds, and testing advanced ensemble methods."
    ]
   },
   {
